lang/macro/tests/ui/fail/09-constructor-self-val.stderr
error: #[ink(constructor)] functions must have a `&mut self` receiver
  --> $DIR/09-constructor-self-val.rs:10:29
   |
10 |         fn invalid_self_val(self) {}
   |                             ^^^^
